infra/k8s/sherlock-search/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sherlock-search
spec:
  selector:
    app: sherlock-search
  ports:
    - name: http
      port: 8810
      targetPort: 8810
